--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-  margin: 0; 
+  margin: 0;
 }
 
 header, nav, footer, section, article, div {
@@ -29,7 +29,7 @@ ul {
 /*
  *
  * Common
- * 
+ *
  */
 
 .news__more {
@@ -56,6 +56,7 @@ ul {
   width: 800px;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
 }
 
 .header__logo {
@@ -226,7 +227,7 @@ main {
 
 .scores__table th,
 .scores__table td {
-  padding: 1em; 
+  padding: 1em;
 }
 
 .scores__table th {
