--- a/main.css
+++ b/main.css
@@ -85,6 +85,7 @@ ul {
   width: 800px;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
 }
 
 .nav__list {
@@ -101,6 +102,7 @@ ul {
   line-height: 24px;
   padding: 24px;
   text-transform: uppercase;
+  font-size: 1.3em;
 }
 
 .nav a {
