--- a/main.css
+++ b/main.css
@@ -54,10 +54,9 @@ ul {
 }
 
 .header__inner {
-  width: 800px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;
 }
 
 .header__logo {
@@ -83,10 +82,9 @@ ul {
  */
 
 .nav {
-  width: 800px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;
 }
 
 .nav__list {
@@ -103,12 +101,12 @@ ul {
   line-height: 24px;
   padding: 24px;
   text-transform: uppercase;
-  font-size: 1.3em;
 }
 
 .nav a {
   text-decoration: none;
   color: #616161;
+  padding: 1.5em;
 }
 
 .nav a:hover {
@@ -125,10 +123,9 @@ ul {
 
 main {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-  width: 800px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;
 }
 
 /*
@@ -146,12 +143,11 @@ main {
 
 .hero {
   float: left;
-  width: 480px;
+  width: 100%;
   position: relative;
   background-image: url("./images/dog.jpg");
   background-size: cover;
   height: 300px;
-  width: 100%;
 }
 
 .hero article {
@@ -174,12 +170,11 @@ main {
  */
 
 .top-news {
-  float: left;
-  width: 320px;
+  float: right;
+  width: 100%;
   height: 300px;
   border-bottom: 1px solid #E0E0E0;
   padding: 1em;
-  width: 100%;
 }
 
 .news__title {
@@ -193,6 +188,7 @@ main {
   border-bottom: 1px solid #E0E0E0;
   padding: 1em 0;
   line-height: 19.2px;
+  padding: 1.5em inherit;
 }
 
 .top-news__item:before {
@@ -221,10 +217,9 @@ main {
  */
 
 .scores {
-  width: 480px;
+  width: 100%;
   float: left;
   padding-top: 1em;
-  width: 100%;
 }
 
 .scores__table {
@@ -271,10 +266,9 @@ main {
  */
 
 .weather {
-  float: left;
-  width: 320px;
-  padding: 1em;
+  float: right;
   width: 100%;
+  padding: 1em;
 }
 
 .weather__location {
@@ -350,6 +344,7 @@ main {
 .snippet__title a {
   text-decoration: none;
   color: #666;
+  padding: 1.5em inherit;
 }
 
 .snippet__title a:hover,
@@ -378,4 +373,5 @@ footer li {
 footer a {
   text-decoration: none;
   color: #333;
+  padding: 1.5em;
 }
