Apply responsive pattern to design layout

--- a/main.css
+++ b/main.css
@@ -133,6 +133,12 @@ main {
  *
  */
 
+ .content {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
 
 /*
  *
@@ -373,4 +379,53 @@ footer a {
   text-decoration: none;
   color: #333;
   padding: 1.5em;
+}
+
+/*
+*
+*Breakpoints
+*
+*/
+
+@media screen and (min-width: 850px) {
+    .content {
+        width: 850px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .hero,
+    .top-news,
+    .scores,
+    .weather {
+        width: 50%;
+    }
+    .nav {
+        width: 500px;
+    }
+    .header {
+        text-align: center;
+    }
+}
+
+@media screen and (min-width: 700px) {
+    .hero,
+    .top-news {
+        width: 50%;
+    }
+    .nav {
+        width: 500px;
+    }
+    .header {
+        text-align: center;
+    }
+}
+
+@media screen and (min-width: 550px) {
+    .hero,
+    .top-news {
+        width: 50%;
+    }
+    .nav {
+        width: 300px;
+    }
 }
