--- a/main.css
+++ b/main.css
@@ -7,8 +7,9 @@ body, html {
 
 body {
   font-family: Roboto;
-  font-size: 12px;
+  font-size: 16px;
   color: #424242;
+  line-height: 1.2em;
 }
 
 h1, h2, h3, h4, h5 {
@@ -67,7 +68,7 @@ ul {
 
 .header__title {
   font-weight: 300;
-  font-size: 4em;
+  font-size: 3em;
   margin: 0.5em 0.25em;
   display: inline-block;
   color: #212121;
@@ -154,7 +155,6 @@ main {
   background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
   bottom: 0;
-  height: 40%;
   width: 100%;
   color: #fff;
   padding: 1em;
@@ -170,7 +170,6 @@ main {
 .top-news {
   float: right;
   width: 100%;
-  height: 300px;
   border-bottom: 1px solid #E0E0E0;
   padding: 1em;
 }
@@ -223,6 +222,7 @@ main {
 .scores__table {
   width: 100%;
   border-collapse: collapse;
+  text-align: center;
 }
 
 .scores__table th,
@@ -380,7 +380,51 @@ footer a {
 *
 */
 
-
+/******************************************
+************Truncting Text****************/
+/* styles for '...' */
+.block-with-text {
+  /* hide text if it more than N lines  */
+  overflow: hidden;
+  /* for set '...' in absolute position */
+  position: relative;
+  /* use this value to count block height */
+  line-height: 1.2em;
+  /* max-height = line-height (1.2) * lines max number (3) */
+  max-height: 3.6em;
+  /* fix problem when last visible word doesn't adjoin right side  */
+  text-align: justify;
+  /* place for '...' */
+  margin-right: -1em;
+  padding-right: 1em;
+}
+/* create the ... */
+.block-with-text:before {
+  /* points in the end */
+  content: '...';
+  /* absolute position */
+  position: absolute;
+  /* set position to right bottom corner of block */
+  right: 0;
+  bottom: 0;
+}
+/* hide ... if we have text, which is less than or equal to max lines */
+.block-with-text:after {
+  /* points in the end */
+  content: '';
+  /* absolute position */
+  position: absolute;
+  /* set position to right bottom corner of text */
+  right: 0;
+  /* set width and height */
+  width: 1em;
+  height: 1em;
+  margin-top: 0.2em;
+  /* bg color = bg color under block */
+  background: white;
+}
+/******************************************
+************Truncting Text end*************/
 .content {
     width: 100%;
     display: flex;
@@ -496,8 +540,4 @@ footer a {
         width: 32px;
         fill: #E0E0E0;
     }
-}
-
-@media screen and (min-width: 400px) and (max-width: 550px) {
-    body { font-size: 1em; }
 }
