Apply hidden columns technique to hide location column on small screens

--- a/main.css
+++ b/main.css
@@ -491,6 +491,9 @@ footer a {
 
 /*Responsive navbar. */
 @media screen and (max-width: 700px) {
+    .scores__location {
+        display: none;
+    }
 /*Header logo and title styles */
     .header__logo {
         height: 48px;
